--- a/css/style.css
+++ b/css/style.css
@@ -1,250 +1,220 @@
-body{
-	margin:0;
+* {
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1em;
+  color: white;
 }
 
-.header-area{
-	
-	width:100%;
-	height:431px;
-	background-color:#86509C;
-	overflow: hidden;
-}
-.logo-area{
-	float: left;
-	margin-left:140px;
-	margin-top: 20px;
-}
-.menu-area{
-	text-align:right;
-}
-.menu-area ul{
-	float:right;
-	margin:25px 60px;
-}
-.menu-area ul li{
-	list-style:none;
-	display: inline-block;
-	padding:5px;
-
-}
-.menu-area ul li a{
-	text-decoration: none;
-	color:#fff;
-	font-size: 13px;
-}
-.menu-area ul li a:hover{
-	background-color: #643A7A;
-	border:5px solid #643A7A ;
-	border-radius:5px;
-	width: 100%;
-	height:100%;
-}
-.text-area{
-	color:#fff;
-	font-family:sans-serif;
-	text-align:center;
-	margin-top:150px;
-	
-}	
-.text-area h2{
-	font-size: 25px;
-}
-.wbtn{
-	text-align:center;
-}
-.wbtn input{
-	width:250px;
-	height:50px;
-	background-color: #EC7C4A;
-	border-radius: 6px;
-	border: none;
-	box-shadow: 0px 3px 0px #C46C48;
-	margin-top: 20px;
-	color:#fff;
-	font-weight:bold;
-}
-.wbtn:hover input{
-	background-color: #17C1A4;
-	box-shadow: 1px 2px 100px #17C1A4;
-}
-.srevices{
-	width:100%;
-	height:531px;
-	background-color:#17C1A4;
-	overflow: hidden;
-	font-family: sans-serif;
-	
-}
-.services-content{
-	padding-top:30px;
-}
-.services-text{
-	text-align: center;
-	color:#fff;
-	font-family: sans-serif;
-}
-.services-text h2{
-	text-transform: uppercase;
-	letter-spacing:2px;
-	font-size: 25px;
-	
-
-}
-.services-text p{
-	margin-top:30px;
-}
-.services-text hr{
-	width:7%;
-	border: 2px solid #12A68C;
-	margin-right: 443px;
-
-	}
-.service-box{
-	width:80%;
-	margin:auto;
-	color:#fff;
-	padding-top: 10px;
-	overflow: hidden;
-
-}
-.col{
-	width:21%;
-	margin:0 2%;
-	text-align:center;
-	float: left;
-	
-
+section {
+  padding: 60px 0;
 }
 
-.service-box1 h2{
-	text-transform: uppercase;
-	font-size: 18px;
-}
-.service-box1 p{
-	line-height: 18px;
-	font-size: 12px;
-}
-.service-box .col:nth-child(1)
-{
-	margin-top:5px;
+.content {
+  width: 80%;
 }
 
-.service-box .col:nth-child(3)
-{
-	margin-top:10px;
-}
-.service-box .col:nth-child(4)
-{
-	margin-top:5px;
+.section-header {
+  text-align: center;
 }
 
-
-
-.team{
-	width:100%;
-	height:640px;
-	background-color:#E8F1F8;
-	overflow: hidden;
+.section-title {
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
+.section-subtext {
+  padding-top: 10px;
+  padding-bottom: 50px;
+  font-size: 1.1em;
+}
 
+hr {
+  border: 2px solid #2c2a3f;
 }
-.team-content{
-	padding-bottom:30px;
-	
-}
-.team-text{
-	color:#878787;
-	text-align:center;
-	
-}
-.team-text h2{
-	text-transform: uppercase;
-	letter-spacing:2px;
-	margin-top:50px;
-}
-.team-text hr{
-	width:8%;
-	border: 2px solid #878787;
-}
-.team-text p{
-	font-size: 12px;
-	color:#878787;
-}
-.team-box{
-	width:80%;
-	margin:auto;
 
+.fullscreen-header {
+  height: 100vh;
+  background-color: #86509c;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.team-col{
-	width:21%;
-	margin:0 2%;
-	float: left;
+.navbar {
+  width: 100%;
+  background-color: inherit;
+  display: flex;
+  justify-content: space-between;
 }
-.team-box1{
-	text-align:center;
+.logo-area {
+  padding: 5px 30px;
+}
+.logo {
+  font-size: 2.5em;
+  font-family: monaco, monospace;
+  color: white;
+  text-decoration: none;
+  font-weight: 900;
+}
 
+.active {
+  background-color: #643a7a;
+  border-radius: 5px;
 }
-.team-box1 img{
-	border-radius: 50%;
-	width:120px;
-	height:120px;
-}
-.team-box h3{
-	text-transform: uppercase;
-	color:#2C2A3F;
-}
-.team-box label{
-	font-size: 12px;
-	color:#17C1A4;
-}
-.team-box p{
-	font-size: 14px;
-	color:#878787;
-}
-.skill{
-	background: #fff;
-	width:100%;
-	height:413px;
-}
-.skill-content{
 
+.menu {
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
 }
-.skill-text{
-	text-align:center;
-	font-family: sans-serif;
+
+.menu a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  display: inline-block;
+  padding: 12px;
 }
-.skill-text h2{
-	text-transform: uppercase;
-	letter-spacing:2px;
+.menu a:hover {
+  background-color: #643a7a;
+  border-radius: 5px;
 }
-.skill-text hr{
-	width:10%;
-	border:2px solid #DFE9EB;
+.text-area {
+  text-align: center;
 }
-.skill-text p{
-	font-size:13px;
-	color:#878787;
+.text-area h1 {
+  font-size: 2em;
 }
-i{
-	font-size:20px;
-	margin:1px;
+.services-btn {
+  padding: 40px;
+  animation: 0.7s goBuddy forwards;
+  animation-delay: 1.2s;
+  visibility: hidden;
 }
-footer{
-	text-align: center;
-	background-color: #86509C;
-	color:#fff;
-	width:100%;
-	height:35px;
-	line-height: 20px;
-	overflow: hidden;
+
+@keyframes goBuddy {
+  0% {
+    visibility: hidden;
+  }
+  50% {
+    padding-bottom: 150px;
+    visibility: visible;
+  }
+  100% {
+    padding: 40px;
+    visibility: visible;
+  }
 }
-footer p{
-	font-family: sans-serif;
-	font-size: 12px;
+
+.services-btn a {
+  padding: 17px 50px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.1em;
+  color: black;
+  background-color: #ec7c4a;
+  border-radius: 6px;
+  border: none;
+  box-shadow: 0px 1px 1px black;
+  cursor: pointer;
 }
-footer a{
-	text-decoration: none;
-	color:#fff;
-	font-weight: bold;
+.services-btn a:hover {
+  filter: contrast(2);
+  box-shadow: none;
+}
+
+.services {
+  background-color: #17c1a4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.col {
+  width: 200px;
+  padding: 10px 20px;
+  text-align: center;
+}
+
+.col img {
+  width: 100px;
+}
+
+.team {
+  color: black;
+  background-color: #e8f1f8;
+}
+.team .content {
+  color: #2c2a3f;
+}
+.team-col img {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+}
+.team-col i {
+  padding: 0 5px;
+  cursor: pointer;
+}
+.teams h3 {
+  font-weight: normal;
+  padding: 5px 0;
+  text-transform: uppercase;
+  color: #2c2a3f;
+}
+.teams label {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: black;
+}
+.teams label::before {
+  content: "[";
+  font-size: larger;
+}
+.teams label::after {
+  content: "]";
+  font-size: larger;
+}
+.teams p {
+  padding: 10px;
+  font-size: 0.8em;
+  color: #6b6b6b;
+}
+
+.skill {
+  color: #878787;
+  background: #fff;
+  width: 100%;
+  height: 413px;
+}
+i {
+  font-size: 20px;
+  margin: 1px;
+}
+footer {
+  text-align: center;
+  background-color: #86509c;
+  color: #fff;
+  width: 100%;
+  height: 35px;
+  line-height: 20px;
+  overflow: hidden;
+}
+footer p {
+  font-family: sans-serif;
+  font-size: 12px;
+}
+footer a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
